# NYCU_CND-Final-Project

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cd.yml  ci_backend_auth.yml  ci_backend_flow.yml  ci_frontend.yml  test_auth_backend.yml  test_flow_backend.yml
backend/auth/: .env.example  Dockerfile  compose.yml  main.py  models.py  pyproject.toml  test_main.py
backend/flow/: .env.example  .gitignore  Dockerfile  compose.yml  main.py  minio.py  models.py  pyproject.toml  test.txt  test_main.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/: App.vue
frontend/src/assets/: styles.css
frontend/src/components/: Navbar.vue  SubmitForReviewModal.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: Admin.vue  Editor.vue  Home.vue  Login.vue  MarkdownEditor.vue  Notifications.vue  Review.vue  Viewer.vue
frontend/tests/: example.spec.js
k8s/: configmap.yaml  deploys.yaml  ingress.yaml  services.yaml
minio/: README.md
minio/app/: main.py  requirements.txt
proxy/: nginx.conf
