[project]
name = "flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt<4.0.0",
    "fastapi[standard]>=0.115.12",
    "google>=3.0.0",
    "google-api-python-client>=2.170.0",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pytest>=8.3.5",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.24",
]
