[project]
name = "flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard,standred]>=0.115.12",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt[cryptography]>=2.10.1",
    "pytest>=8.3.5",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "sqlmodel>=0.0.24",
]
